# AutoTuneTMP

./: .gitmodules  AutoTuneTMPConfig.cmake  CMakeLists.txt  LICENSE  README.md  build-all.sh  circle.yml  set_environment_paths.sh  source-me.sh
.circleci/: config.yml
diss_experiments/: run_diss_experiments.sh
examples/: bruteforce_search_example.cpp  continuous_parameter_example.cpp  copyable_kernel_example.cpp  countable_set_example.cpp  greedy_neighborhood_search_example.cpp  grid_executor_example.cpp  group_tuner_dep_example.cpp  group_tuner_example.cpp  group_tuner_simple_dep_example.cpp  jit_only_example.cpp  line_search_example.cpp  loop_interchange.cpp  loop_interchange_tunable.cpp  loop_nest_example.cpp  loop_tiling.cpp  matrix_tiling.cpp  matrix_tiling_iterate.cpp  matrix_vector_blocking.cpp  minimal_example.cpp  monte_carlo_example.cpp  mult_example.cpp  neighborhood_search_example.cpp  parallel_line_search_example.cpp  queue_thread_pool_example.cpp  reentrant_line_search_example.cpp  register_blocking.cpp  register_blocking_minimal.cpp  simple_sor_diffusion.cpp  simple_sor_diffusion.hpp  simplified_jit_only_example.cpp  simplified_matrix_vector_blocking.cpp  stream.cpp  stream_thread_pool.cpp  switchable_affinity_policy.cpp  switchable_aos_soa.cpp  switchable_parallelization.cpp  tga.h  thread_pool_example.cpp  tuned_grid_executor_example.cpp  tuned_grid_executor_generalized_kernel_example.cpp  (+4 more)
examples/grid_mult_kernel/: grid_mult_kernel.cpp
examples/jit_only_kernel/: copy_memory.cpp  square.cpp
examples/kernel_input_variant_smooth_cost_function/: input_variant_smooth_cost_function.cpp
examples/kernel_matrix_vector/: matrix_vector.cpp
examples/kernel_minimal/: add_one.cpp  parameters.hpp
examples/kernel_simplified_matrix_vector/: matrix_vector.cpp
examples/kernel_smooth_cost_function/: smooth_cost_function.cpp
examples/kernel_sor_diffusion/: SORDiffusion.cpp  parameters.hpp
examples/kernel_unrolled_arith/: square_vector.cpp
examples/kernels_unroll_loop_autotune/: parameters.hpp  unrolling_kernel.cpp
examples/kernels_unroll_loop_autotune_return_int/: unrolling_kernel.cpp
examples/loop_interchange_kernel/: loop_interchange.cpp
examples/mult_kernel/: mult_kernel.cpp
examples/stream_kernel/: copy.cpp  scale.cpp  sum.cpp  triad.cpp
examples/stream_kernel_thread_pool/: copy.cpp  scale.cpp  sum.cpp  triad.cpp
grid_include/: grid.hpp
include/autotune/: abstract_kernel.hpp  abstract_parameter.hpp  autotune.cpp  autotune.hpp  autotune_exception.hpp  constant_parameter.hpp  constraint_graph.hpp  continuous_parameter.hpp  cppjit_kernel.hpp  dependency_graph.hpp  execution_wrapper.hpp  fixed_atomic_queue.hpp  fixed_set_parameter.hpp  generalized_kernel.hpp  grid_executor.hpp  log_parameter.hpp  parameter.hpp  parameter_factory.hpp  parameter_set.hpp  parameter_superset.hpp  parameter_value_set.hpp  queue_thread_pool.hpp  simple_constraints.hpp  thread_meta.hpp  thread_pool.hpp  thread_safe_queue.hpp  tuned_grid_executor.hpp  util.hpp
include/autotune/helpers/: non_zero_seq.hpp  timing.hpp
include/autotune/tuners/: abstract_reentrant_tuner.hpp  abstract_tuner.hpp  apply_parameters.hpp  bisect_search.hpp  bruteforce.hpp  common.hpp  countable_set.hpp  csv_reporter.hpp  evaluate.hpp  full_neighborhood_search.hpp  greedy_neighborhood_search.hpp  grid_bruteforce.hpp  grid_line_search.hpp  group_tuner.hpp  limited_set.hpp  line_search.hpp  monte_carlo.hpp  neighborhood_search.hpp  parallel_full_neighborhood_search.hpp  parallel_line_search.hpp  parallel_neighborhood_search.hpp  parameter_result_cache.hpp  randomizable_set.hpp  reentrant_line_search.hpp  simulated_annealing.hpp  with_tests.hpp
include/opttmp/: bits.hpp  helper.hpp  numa_topology.hpp  unroll_loop.hpp
include/opttmp/loop/: loop_exchange.hpp  loop_nest.hpp  loop_tiling.hpp  parallelizable_loop.hpp  unroll_loop.hpp
include/opttmp/memory_layout/: struct_of_array_data.hpp  tile_array.hpp  tile_iterator.hpp  tile_view.hpp  tiling_info_dim.hpp  util.hpp
include/opttmp/vectorization/: expression.hpp  register_array.hpp  register_tiling.hpp  vector_tiling.hpp
paper/fmm_m2m_interactions/: compute_factor.cpp  compute_factor.hpp  compute_ilist.cpp  compute_ilist.hpp  fmm_m2m_interactions.cpp  geometry.hpp  interaction_types.hpp  kernel_reference.cpp  kernel_reference.hpp  new.cpp  taylor.cpp  taylor.hpp  taylor_set_basis.hpp  types.hpp
paper/fmm_m2m_interactions/kernels/: calculate_stencil.cpp  calculate_stencil.hpp  helper.hpp  interaction_constants.hpp  interactions_iterators.hpp  m2m_factor.hpp  m2m_interactions.cpp  m2m_interactions.hpp  m2m_kernel.cpp  m2m_kernel.hpp  m2m_kernel_blocked_interaction.cpp  m2m_simd_types.hpp  multiindex.hpp  struct_of_array_data.hpp  unroll_loop.hpp
scripts/: build-AutoTuneTMP-debug.sh  build-AutoTuneTMP.sh  build-Vc.sh  build-boost.sh  build-cmake.sh  build-cppjit.sh  build-gcc.sh  build-gcc8.sh  build-likwid.sh
src/autotune/: autotune.hpp  parameter.hpp
src/autotune/tuners/: bruteforce.hpp  common.hpp  line_search.hpp
src/opttmp/loop/: unroll_loop.hpp
src/opttmp/memory_layout/: tile_array.hpp
tests/: boost_tests.cpp
tests/kernel_run_bruteforce_kernel/: run_bruteforce_kernel.cpp
tests/kernel_run_different_parameter_values/: run_different_parameter_values.cpp
tests/kernel_run_full_neighborhood_search_kernel/: run_full_neighborhood_search_kernel.cpp
tests/kernel_run_kernel/: run_kernel.cpp
tests/kernel_run_line_search_kernel/: run_line_search_kernel.cpp
tests/kernel_run_monte_carlo_kernel/: run_monte_carlo_kernel.cpp
tests/kernel_run_neighborhood_search_kernel/: run_neighborhood_search_kernel.cpp
